--- a/fuelphp/composer.json
+++ b/fuelphp/composer.json
@@ -49,5 +49,8 @@
             "php oil r install"
         ]
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "require-dev": {
+        "eviweb/fuelphp-phpcs": "~1"
+    }
 }
