Create sample using AWS S3 with AWS SDK for PHP

--- a/fuelphp/composer.json
+++ b/fuelphp/composer.json
@@ -26,7 +26,8 @@
         "fuelphp/upload": "2.0.2",
         "monolog/monolog": "1.5.*",
         "michelf/php-markdown": "1.4.0",
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "4.8.*",
+        "aws/aws-sdk-php": "^3.17"
     },
     "suggest": {
         "dwoo/dwoo" : "Allow Dwoo templating with the Parser package",
